--- a/index.html
+++ b/index.html
@@ -76,38 +76,41 @@
                     </div>
                     <div class="row mb-3">
                         <div class="col-md-6">
-                            <label class="form-label d-block mb-2">We accept:</label>
-                            <div class="bg-secondary rounded text-white mx-auto px-2 py-2 w-auto">
-                                <div class="d-flex justify-content-evenly align-items-center gap-4">
-                                    <div class="form-check mb-0">
-                                        <input class="form-check-input" type="radio" name="cardType" id="mastercard"
-                                            required style="scale: 0.6;">
-                                        <label class="form-check-label mt-1" for="mastercard">
-                                            <i class="fa-brands fa-cc-mastercard fs-3"></i>
-                                        </label>
+                            <label class="form-label mb-2">We accept:</label>
+                            <!--Arreglo de Bg-->
+                            <div class="d-flex w-100">
+                                <div class="bg-secondary rounded text-white px-2 py-2 d-flex justify-content-start">
+                                    <div class="d-flex justify-content-evenly gap-4">
+                                        <div class="form-check mb-0 d-flex align-items-center">
+                                            <input class="form-check-input me-1" type="radio" name="cardType"
+                                                id="mastercard" required style="scale: 0.6;">
+                                            <label class="form-check-label mt-1" for="mastercard">
+                                                <i class="fa-brands fa-cc-mastercard fs-3"></i>
+                                            </label>
+                                        </div>
+                                        <div class="form-check mb-0 d-flex align-items-center">
+                                            <input class="form-check-input me-1" type="radio" name="cardType" id="visa"
+                                                style="scale: 0.6;">
+                                            <label class="form-check-label mt-1" for="visa">
+                                                <i class="fa-brands fa-cc-visa fs-3"></i>
+                                            </label>
+                                        </div>
+                                        <div class="form-check mb-0 d-flex align-items-center">
+                                            <input class="form-check-input me-1" type="radio" name="cardType" id="cc-amex"
+                                                style="scale: 0.6;">
+                                            <label class="form-check-label mt-1" for="cc-amex">
+                                                <i class="fa-brands fa-cc-amex fs-3"></i>
+                                            </label>
+                                        </div>
+                                        <div class="form-check mb-0 d-flex align-items-center">
+                                            <input class="form-check-input me-1" type="radio" name="cardType" id="paypal"
+                                                style="scale: 0.6;">
+                                            <label class="form-check-label mt-1" for="paypal">
+                                                <i class="fa-brands fa-cc-paypal fs-3"></i>
+                                            </label>
+                                        </div>
+                                        <!--Text Area-->
                                     </div>
-                                    <div class="form-check mb-0">
-                                        <input class="form-check-input" type="radio" name="cardType" id="visa"
-                                            style="scale: 0.6" ;>
-                                        <label class="form-check-label mt-1" for="visa">
-                                            <i class="fa-brands fa-cc-visa fs-3"></i>
-                                        </label>
-                                    </div>
-                                    <div class="form-check mb-0">
-                                        <input class="form-check-input" type="radio" name="cardType" id="cc-amex"
-                                            style="scale: 0.6" ;>
-                                        <label class="form-check-label mt-1" for="cc-amex">
-                                            <i class="fa-brands fa-cc-amex fs-3"></i>
-                                        </label>
-                                    </div>
-                                    <div class="form-check mb-0">
-                                        <input class="form-check-input" type="radio" name="cardType" id="paypal"
-                                            style="scale: 0.6" ;>
-                                        <label class="form-check-label mt-1" for="paypal">
-                                            <i class="fa-brands fa-cc-paypal fs-3"></i>
-                                        </label>
-                                    </div>
-                                    <!--Text Area-->
                                 </div>
                             </div>
                         </div>
